# irir

./: .gitignore  Dockerfile  Dockerfile.tmpl  ENVIRONMENT.md  README.md  main.py  pyproject.toml
.github/workflows/: check-aws-connection.yml  db_workflow.yml  register.yml  test.yml_
app/common/main/lib/: model.py  utils.py
app/common/main/resources/: document_list_response_type1.json
app/db/: Dockerfile  main.py  pyproject.toml
app/db/main/: main.py
app/db/main/model/edinet/: document_item.py  document_list_response_type1.py  document_list_response_type2.py  metadata.py
app/db/main/strategy/: strategy.py
app/db/model/edinet/: document_item.py  document_list_response_type1.py  document_list_response_type2.py  edinet_enums.py  metadata.py  resultset.py
app/db/strategy/: strategy.py
app/register/: pyproject.toml
app/register/main/: main.py
app/register/main/model/: lambda_event.py
app/register/main/model/edinet/: document_item.py  document_list_response_type1.py  document_list_response_type2.py  metadata.py  parameter.py
app/register/main/resources/: cloud_lambda_event.json  local_lambda_event.json
app/register/main/strategy/: strategy.py
backend/main/: main.py
backend/main/model/edinet/: document_list_response_type1.py  document_list_response_type2.py  metadata.py
backend/test/resources/: document_list_response_type2.json
