[project]
name = "irir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "black>=25.1.0",
    "boto3>=1.40.10",
    "fastapi[standard]>=0.116.1",
    "ipython>=8.37.0",
    "ruff>=0.12.7",
    "streamlit>=1.48.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
