[project]
name = "irir"
version = "0.1.0"
description = "DB related scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "black>=25.1.0",
    "boto3>=1.40.10",
    "ipython>=8.37.0",
    "ruff>=0.12.7",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
